@@ -53,8 +53,6 @@
                 <groupId>com.toasttab.android</groupId>
                 <artifactId>gummy-bears-api-21</artifactId>
                 <version>0.10.0</version>
-                <!-- <classifier>coreLib2</classifier> -->
-                <!-- ^^ https://github.com/open-toast/gummy-bears says coreLib2 classifier for desugar should work, but I can't seem to wrangle Animal Sniffer to support that, so reverting to ignores for desugar -->
               </signature>
               <ignores>
                 <ignore>java.io.File</ignore> <!-- File#toPath() -->
@@ -326,323 +324,6 @@
     </resources>
   </build>
 
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>animal-sniffer-maven-plugin</artifactId>
-                <version>1.27</version>
-                <executions>
-                    <execution>
-                        <id>api-java8</id>
-                        <phase>compile</phase>
-                        <goals><goal>check</goal></goals>
-                        <configuration>
-                            <signature>
-                                <groupId>org.codehaus.mojo.signature</groupId>
-                                <artifactId>java18</artifactId>
-                                <version>1.0</version>
-                            </signature>
-                            <ignores>
-                                <ignore>java.net.HttpURLConnection</ignore>
-                                <ignore>java.net.http.*</ignore>
-                            </ignores>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>api-android21</id>
-                        <phase>compile</phase>
-                        <goals><goal>check</goal></goals>
-                        <configuration>
-                            <signature>
-                                <groupId>com.toasttab.android</groupId>
-                                <artifactId>gummy-bears-api-21</artifactId>
-                                <version>0.10.0</version>
-                            </signature>
-                            <ignores>
-                                <ignore>java.io.File</ignore>
-                                <ignore>java.nio.file.*</ignore>
-                                <ignore>java.nio.channels.SeekableByteChannel</ignore>
-                                <ignore>java.util.function.*</ignore>
-                                <ignore>java.util.stream.*</ignore>
-                                <ignore>java.lang.ThreadLocal</ignore>
-                                <ignore>java.io.UncheckedIOException</ignore>
-                                <ignore>java.util.Comparator</ignore>
-                                <ignore>java.util.List</ignore>
-                                <ignore>java.util.ArrayList</ignore>
-                                <ignore>java.util.LinkedHashMap</ignore>
-                                <ignore>java.util.Map</ignore>
-                                <ignore>java.util.Objects</ignore>
-                                <ignore>java.util.Optional</ignore>
-                                <ignore>java.util.Set</ignore>
-                                <ignore>java.util.Spliterator</ignore>
-                                <ignore>java.util.Spliterators</ignore>
-                                <ignore>java.nio.ByteBuffer</ignore>
-                                <ignore>java.net.HttpURLConnection</ignore>
-                                <ignore>java.net.http.*</ignore>
-                                <ignore>java.time.Duration</ignore>
-                                <ignore>java.util.OptionalLong</ignore>
-                            </ignores>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <version>3.12.0</version>
-                <configuration>
-                    <doclint>none</doclint>
-                    <source>8</source>
-                    <linksource>true</linksource>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>attach-javadoc</id>
-                        <goals><goal>jar</goal></goals>
-                    </execution>
-                </executions>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-source-plugin</artifactId>
-                <version>3.4.0</version>
-                <configuration>
-                    <excludes>
-                        <exclude>org/jsoup/examples/**</exclude>
-                    </excludes>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>attach-sources</id>
-                        <goals><goal>jar-no-fork</goal></goals>
-                    </execution>
-                </executions>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <version>3.5.0</version>
-                <configuration>
-                    <archive>
-                        <manifest>
-                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
-                        </manifest>
-                        <manifestEntries>
-                            <Multi-Release>true</Multi-Release>
-                        </manifestEntries>
-                        <manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
-                    </archive>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>default-jar</id>
-                        <phase>package</phase>
-                        <goals><goal>jar</goal></goals>
-                        <configuration>
-                            <excludes>
-                                <exclude>org/jsoup/examples/**</exclude>
-                            </excludes>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>jar-examples</id>
-                        <phase>package</phase>
-                        <goals><goal>jar</goal></goals>
-                        <configuration>
-                            <classifier>examples</classifier>
-                            <includes>
-                                <include>org/jsoup/**</include>
-                                <include>org/jsoup/examples/**</include>
-                            </includes>
-                            <archive>
-                                <manifest>
-                                    <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
-                                    <mainClass>org.jsoup.examples.HtmlToPlainText</mainClass>
-                                </manifest>
-                            </archive>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-
-              <execution>
-                <id>compile-java-8</id>
-                <phase>compile</phase>
-                <goals>
-                  <goal>compile</goal>
-                </goals>
-                <configuration>
-                    <instructions>
-                        <Bundle-DocURL>https://jsoup.org/</Bundle-DocURL>
-                        <Export-Package>org.jsoup.*</Export-Package>
-                        <Import-Package>!org.jsoup.*,org.jspecify.annotations;version=!;resolution:=optional,*</Import-Package>
-                    </instructions>
-                </configuration>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-resources-plugin</artifactId>
-                <version>3.4.0</version>
-            </plugin>
-
-              <execution>
-                <id>testCompile-java-11</id>
-                <phase>test-compile</phase>
-                <goals>
-                  <goal>testCompile</goal>
-                </goals>
-                <configuration>
-                  <useModulePath>false</useModulePath>
-                  <release>11</release>
-                </configuration>
-              </execution>
-
-              <execution>
-                <id>compile-java-11</id>
-                <phase>compile</phase>
-                <goals>
-                  <goal>compile</goal>
-                </goals>
-                <configuration>
-                    <argLine>-Xss640k</argLine>
-                </configuration>
-            </plugin>
-
-            <plugin>
-                <artifactId>maven-failsafe-plugin</artifactId>
-                <version>3.5.5</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>integration-test</goal>
-                            <goal>verify</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <parallel>methods</parallel>
-                    <threadCount>8</threadCount>
-                </configuration>
-            </plugin>
-
-            <plugin>
-                <groupId>com.github.siom79.japicmp</groupId>
-                <artifactId>japicmp-maven-plugin</artifactId>
-                <version>0.25.4</version>
-                <configuration>
-                    <oldVersion>
-                        <dependency>
-                            <groupId>org.jsoup</groupId>
-                            <artifactId>jsoup</artifactId>
-                            <version>1.21.2</version>
-                            <type>jar</type>
-                        </dependency>
-                    </oldVersion>
-                    <parameter>
-                        <onlyModified>false</onlyModified>
-                        <breakBuildOnBinaryIncompatibleModifications>true</breakBuildOnBinaryIncompatibleModifications>
-                        <breakBuildOnSourceIncompatibleModifications>true</breakBuildOnSourceIncompatibleModifications>
-                        <excludes />
-                        <overrideCompatibilityChangeParameters>
-                            <overrideCompatibilityChangeParameter>
-                                <compatibilityChange>METHOD_NEW_DEFAULT</compatibilityChange>
-                                <binaryCompatible>true</binaryCompatible>
-                                <sourceCompatible>true</sourceCompatible>
-                            </overrideCompatibilityChangeParameter>
-                            <overrideCompatibilityChangeParameter>
-                                <compatibilityChange>METHOD_ABSTRACT_NOW_DEFAULT</compatibilityChange>
-                                <binaryCompatible>true</binaryCompatible>
-                                <sourceCompatible>true</sourceCompatible>
-                            </overrideCompatibilityChangeParameter>
-                        </overrideCompatibilityChangeParameters>
-                    </parameter>
-                </configuration>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals><goal>cmp</goal></goals>
-                    </execution>
-                </executions>
-            </plugin>
-
-            <plugin>
-                <groupId>org.sonatype.central</groupId>
-                <artifactId>central-publishing-maven-plugin</artifactId>
-                <version>0.10.0</version>
-                <extensions>true</extensions>
-                <configuration>
-                    <publishingServerId>central</publishingServerId>
-                </configuration>
-            </plugin>
-
-            <plugin>
-                <groupId>org.pitest</groupId>
-                <artifactId>pitest-maven</artifactId>
-                <version>1.17.0</version>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.pitest</groupId>
-                        <artifactId>pitest-junit5-plugin</artifactId>
-                        <version>1.2.2</version>
-                    </dependency>
-                </dependencies>
-                <configuration>
-                    <targetTests>
-                        <param>org.jsoup.*</param>
-                    </targetTests>
-                    <targetClasses>
-                        <param>org.jsoup.internal.*</param>
-<!--                        <param>org.jsoup.Jsoup</param>-->
-<!--                        <param>org.jsoup.helper.*</param>-->
-<!--                        <param>org.jsoup.internal.*</param>-->
-<!--                        <param>org.jsoup.nodes.*</param>-->
-<!--                        <param>org.jsoup.parser.*</param>-->
-<!--                        <param>org.jsoup.select.*</param>-->
-<!--                        <param>org.jsoup.safety.*</param>-->
-                    </targetClasses>
-                    <mutators>
-                        <mutator>DEFAULTS</mutator>
-                    </mutators>
-                    <outputFormats>
-                        <outputFormat>HTML</outputFormat>
-                        <outputFormat>XML</outputFormat>
-                    </outputFormats>
-                    <mutationThreshold>0</mutationThreshold>
-                    <jvmArgs>
-                        <jvmArg>-Xss640k</jvmArg>
-                        <jvmArg>--add-opens=java.base/java.lang=ALL-UNNAMED</jvmArg>
-                        <jvmArg>--add-opens=java.base/java.util=ALL-UNNAMED</jvmArg>
-                        <jvmArg>--add-opens=java.base/java.io=ALL-UNNAMED</jvmArg>
-                    </jvmArgs>
-                    <timeoutConstant>10000</timeoutConstant>
-                    <threads>4</threads>
-                    <withHistory>true</withHistory>
-                    <historyInputFile>${project.basedir}/pitest-history.bin</historyInputFile>
-                    <historyOutputFile>${project.basedir}/pitest-history.bin</historyOutputFile>
-                </configuration>
-            </plugin>
-
-        </plugins>
-
-        <resources>
-            <resource>
-                <directory>src/main/resources</directory>
-                <filtering>false</filtering>
-            </resource>
-            <resource>
-                <directory>./</directory>
-                <targetPath>META-INF/jsoup/</targetPath>
-                <filtering>false</filtering>
-                <includes>
-                    <include>LICENSE</include>
-                </includes>
-            </resource>
-        </resources>
-    </build>
-
     <profiles>
 
         <profile>
@@ -831,8 +512,6 @@
             <artifactId>jazzer-api</artifactId>
             <version>0.22.1</version>
         </dependency>
-
-
     </dependencies>
 
     <dependencyManagement>
